@@ -62,6 +62,6 @@
 	},
 	"scripts": {
 		"test:unit": ".Build/bin/phpunit -c Tests/phpunit.xml.dist",
-		"test:phpstan": ".Build/bin/phpstan clear-result-cache && .Build/bin/phpstan > phpstan-report.log"
+		"test:phpstan": ".Build/bin/phpstan clear-result-cache && .Build/bin/phpstan --configuration=Tests/phpstan.neon > phpstan-report.log"
 	}
 }
